Switch server to tomcat, misc java 21 updates (#180)